Assert failure in draw manager when opening file #57980

Closed
opened 2018-11-21 16:24:30 +01:00 by Sergey Sharybin · 3 comments

System Information

Debian Buster 64bit, GTX1080 390.87

Blender Version

Broken: 2a354dd4bd
Worked: no knowledge

Short description of error

Open the file and observe instant assert failure. Release build works fine.

Exact steps for others to reproduce the error

Same as description :)

Master molecules_2.8.blend

Here is the backtrace P831: (An Untitled Masterwork)

(gdb) bt
#0  __GI_raise (sig=sig@entry=6) at ../sysdeps/unix/sysv/linux/raise.c:51
#1  0x00007ffff63872f1 in __GI_abort () at abort.c:79
#2  0x000055555aeee4c1 in DRW_shgroup_call_object_add_ex (shgroup=0x6310000f7848, geom=0x0, ob=0x61b0002cfb88, ma=0x0, bypass_culling=false)
    at /home/sergey/src/blender/blender/source/blender/draw/intern/draw_manager_data.c:462
#3  0x000055555af48800 in overlay_cache_populate (vedata=0x6160003b5588, ob=0x61b0002cfb88) at /home/sergey/src/blender/blender/source/blender/draw/modes/overlay_mode.c:286
#4  0x000055555aee2222 in drw_engines_cache_populate (ob=0x61b0002cfb88) at /home/sergey/src/blender/blender/source/blender/draw/intern/draw_manager.c:979
#5  0x000055555aee43e5 in DRW_draw_render_loop_ex (depsgraph=0x61100021b788, engine_type=0x6110001d6cc8, ar=0x614000023c48, v3d=0x619000618088, viewport=0x60d0004730a8, evil_C=0x60c000000588)
    at /home/sergey/src/blender/blender/source/blender/draw/intern/draw_manager.c:1430
#6  0x000055555aee3cbc in DRW_draw_view (C=0x60c000000588) at /home/sergey/src/blender/blender/source/blender/draw/intern/draw_manager.c:1367
#7  0x0000555559260b70 in view3d_draw_view (C=0x60c000000588, ar=0x614000023c48) at /home/sergey/src/blender/blender/source/blender/editors/space_view3d/view3d_draw.c:1319
#8  0x0000555559260c68 in view3d_main_region_draw (C=0x60c000000588, ar=0x614000023c48) at /home/sergey/src/blender/blender/source/blender/editors/space_view3d/view3d_draw.c:1340
#9  0x0000555559e59638 in ED_region_do_draw (C=0x60c000000588, ar=0x614000023c48) at /home/sergey/src/blender/blender/source/blender/editors/screen/area.c:529
#10 0x0000555558f4b1f7 in wm_draw_window_offscreen (C=0x60c000000588, win=0x61300069d248, stereo=false) at /home/sergey/src/blender/blender/source/blender/windowmanager/intern/wm_draw.c:572
#11 0x0000555558f4bd34 in wm_draw_window (C=0x60c000000588, win=0x61300069d248) at /home/sergey/src/blender/blender/source/blender/windowmanager/intern/wm_draw.c:698
#12 0x0000555558f4c77a in wm_draw_update (C=0x60c000000588) at /home/sergey/src/blender/blender/source/blender/windowmanager/intern/wm_draw.c:852
#13 0x0000555558f44a94 in WM_main (C=0x60c000000588) at /home/sergey/src/blender/blender/source/blender/windowmanager/intern/wm.c:433
#14 0x0000555558f3a22e in main (argc=1, argv=0x7fffffffd548) at /home/sergey/src/blender/blender/source/creator/creator.c:525

Not sure its DWM or DEG issue though.

**System Information** Debian Buster 64bit, GTX1080 390.87 **Blender Version** Broken: 2a354dd4bd Worked: no knowledge **Short description of error** Open the file and observe instant assert failure. Release build works fine. **Exact steps for others to reproduce the error** Same as description :) [Master molecules_2.8.blend](https://archive.blender.org/developer/F5285757/Master_molecules_2.8.blend) Here is the backtrace [P831: (An Untitled Masterwork)](https://archive.blender.org/developer/P831.txt) ``` (gdb) bt #0 __GI_raise (sig=sig@entry=6) at ../sysdeps/unix/sysv/linux/raise.c:51 #1 0x00007ffff63872f1 in __GI_abort () at abort.c:79 #2 0x000055555aeee4c1 in DRW_shgroup_call_object_add_ex (shgroup=0x6310000f7848, geom=0x0, ob=0x61b0002cfb88, ma=0x0, bypass_culling=false) at /home/sergey/src/blender/blender/source/blender/draw/intern/draw_manager_data.c:462 #3 0x000055555af48800 in overlay_cache_populate (vedata=0x6160003b5588, ob=0x61b0002cfb88) at /home/sergey/src/blender/blender/source/blender/draw/modes/overlay_mode.c:286 #4 0x000055555aee2222 in drw_engines_cache_populate (ob=0x61b0002cfb88) at /home/sergey/src/blender/blender/source/blender/draw/intern/draw_manager.c:979 #5 0x000055555aee43e5 in DRW_draw_render_loop_ex (depsgraph=0x61100021b788, engine_type=0x6110001d6cc8, ar=0x614000023c48, v3d=0x619000618088, viewport=0x60d0004730a8, evil_C=0x60c000000588) at /home/sergey/src/blender/blender/source/blender/draw/intern/draw_manager.c:1430 #6 0x000055555aee3cbc in DRW_draw_view (C=0x60c000000588) at /home/sergey/src/blender/blender/source/blender/draw/intern/draw_manager.c:1367 #7 0x0000555559260b70 in view3d_draw_view (C=0x60c000000588, ar=0x614000023c48) at /home/sergey/src/blender/blender/source/blender/editors/space_view3d/view3d_draw.c:1319 #8 0x0000555559260c68 in view3d_main_region_draw (C=0x60c000000588, ar=0x614000023c48) at /home/sergey/src/blender/blender/source/blender/editors/space_view3d/view3d_draw.c:1340 #9 0x0000555559e59638 in ED_region_do_draw (C=0x60c000000588, ar=0x614000023c48) at /home/sergey/src/blender/blender/source/blender/editors/screen/area.c:529 #10 0x0000555558f4b1f7 in wm_draw_window_offscreen (C=0x60c000000588, win=0x61300069d248, stereo=false) at /home/sergey/src/blender/blender/source/blender/windowmanager/intern/wm_draw.c:572 #11 0x0000555558f4bd34 in wm_draw_window (C=0x60c000000588, win=0x61300069d248) at /home/sergey/src/blender/blender/source/blender/windowmanager/intern/wm_draw.c:698 #12 0x0000555558f4c77a in wm_draw_update (C=0x60c000000588) at /home/sergey/src/blender/blender/source/blender/windowmanager/intern/wm_draw.c:852 #13 0x0000555558f44a94 in WM_main (C=0x60c000000588) at /home/sergey/src/blender/blender/source/blender/windowmanager/intern/wm.c:433 #14 0x0000555558f3a22e in main (argc=1, argv=0x7fffffffd548) at /home/sergey/src/blender/blender/source/creator/creator.c:525 ``` Not sure its DWM or DEG issue though.
Author
Owner

Added subscriber: @Sergey

Added subscriber: @Sergey
Clément Foucault was assigned by Sergey Sharybin 2018-11-21 16:24:44 +01:00

This issue was referenced by e16ef56a0d

This issue was referenced by e16ef56a0dd02f882adaca1f7ea52cc2b02469f8

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#57980
No description provided.