Fix T57980: Assert failure in draw manager when opening file